--- a/CV.html
+++ b/CV.html
@@ -212,7 +212,7 @@
                 <div class="publ">
                     <h3>Publications</h3>
                      <div class="content_part">
-                    <p class="full_list" style="margin: 0;">Full List <a href="/publications.html">Here</a></p>
+                    <p class="full_list" style="margin: 0;">Full List <a href="/ponchaWeb/publications.html">Here</a></p>
                     </div>
                 </div>
                 <div class="review">
