Fixed Home page Image issue

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="content_part">
                      <div class="client_image">
-                        <img src="/assets/images/joel.jpg" alt="joel"/>
+                        <img src="assets/images/joel.jpg" alt="joel"/>
                         <div class="cline_name">Joel Poncha Lemayian</div>
                     </div>
                     <h2>Short Bio</h2>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="sidebar">
                     <div class="client_image">
-                        <img src="/assets/images/joel.jpg" alt="joel"/>
+                        <img src="assets/images/joel.jpg" alt="joel"/>
                         <div class="cline_name">Joel Poncha Lemayian</div>
                     </div>
                      <h2>Highlights</h2>
