link updated according to url

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                      <div class="highlights">
                         <p><strong>October 2022: </strong> Started internship at Quantum eMotions Inc.</p>
                      </div>
-                     <a class="site_btn" href="/updates">Other Updates</a>
+                     <a class="site_btn" href="/ImPoncha.github.io/updates">Other Updates</a>
                 </div>
             </div>
         </div>
