--- a/CV.html
+++ b/CV.html
@@ -20,22 +20,40 @@
                     <h3>Education</h3>
                     <div class="row">
                         <div class="education_box">
-                            <div class="ubi_img"><img src="assets/images/phd.png" alt="phd" /></div>
-                            <h4>PhD, Electrical Engineering</h4>
-                            <div class="university">Ecole de Technologie Superieure (ETS) - Canada</div>
-                            <p>April 2021 – October 2025</p>
+                           <div class="front_side">
+                                <div class="ubi_img"><img src="assets/images/phd.png" alt="phd" /></div>
+                                <h4>PhD, Electrical Engineering</h4>
+                                <div class="university">Ecole de Technologie Superieure (ETS) - Canada</div>
+                                <p>April 2021 – October 2025</p>
+                            </div> 
+                            <div class="back_side">
+                                <div class="back_content"><strong>Thesis title:</strong> “A Hybrid AI Framework for Data Fusion, Situation Analysis, and Decision Support towards Precision Health”</div>
+                                 <div class="back_content"><strong>Supervisor:</strong> Deshen Moodley</div>                            
+                            </div>
                         </div>
                         <div class="education_box">
-                            <div class="ubi_img"><img src="assets/images/msc.png" alt="msc" /></div>
-                            <h4>MSc, Electrical and Computer Engineering</h4>
-                            <div class="university">Antalya Bilim University (ABU) - Turkey</div>
-                            <p>July 2018 - March 2021</p>
+                             <div class="front_side">
+                                <div class="ubi_img"><img src="assets/images/msc.png" alt="msc" /></div>
+                                <h4>MSc, Electrical and Computer Engineering</h4>
+                                <div class="university">Antalya Bilim University (ABU) - Turkey</div>
+                                <p>July 2018 - March 2021</p>
+                            </div>
+                            <div class="back_side">
+                                <div class="back_content"><strong>Degree classification:</strong> Disctinction</div>
+                                 <div class="back_content"><strong>Dissertation title:</strong> “Hello, Goodbye: Training Social Robots to Manage Interactions with Humans”</div>                            
+                                 <div class="back_content"><strong>Supervisor:</strong> Angelo Cangelosi</div>                            
+                            </div>
                         </div>
                         <div class="education_box">
-                            <div class="ubi_img"><img src="assets/images/bsc.png" alt="bsc" /></div>
-                            <h4>BSc, Electrical and Computer Engineering</h4>
-                            <div class="university">Middle East Technical University (METU) - Turkey</div>
-                            <p>July 2018 - March 2021</p>
+                            <div class="front_side">
+                                <div class="ubi_img"><img src="assets/images/bsc.png" alt="bsc" /></div>
+                                <h4>BSc, Electrical and Computer Engineering</h4>
+                                <div class="university">Middle East Technical University (METU) - Turkey</div>
+                                <p>July 2018 - March 2021</p>
+                            </div>
+                             <div class="back_side">
+                                <div class="back_content"><strong>Degree classification:</strong> Upper Second Class Honours</div>
+                            </div>
                         </div>
                     </div>
                 </div>
