--- a/publications.html
+++ b/publications.html
@@ -12,47 +12,67 @@
     <main id="main">
         <section id="publications">
             <div class="container">
-                <h2>Publications</h2>
+                <h2>Publications and Preprints</h2>
                 <div class="publication_lists">
                     <div class="pub_box">
-                        <h3>Book chapters</h3>
-                        <ol>
+                        <!-- <h3>Book chapters</h3> -->
+                        <!-- <ol>
                             <li><p>Lemayian Joel Poncha and Fadi Al-Turjman. "Intelligent IoT communication in smart environments: An overview." In Artificial Intelligence in IoT, pp. 207-221. Springer, Cham, 2019.</p></li>
                             <li><p>Joel Poncha Lemayian, Al-Turjman, Fadi, Sinem Alturjman, and Leonardo Mostarda. "Optimal Placement for 5G Drone-BS Using SA and GA" In Drones in IoT-enabled Space pp. 100-110. CRC Press, 2019.</p></li>
-                        </ol>
+                        </ol> -->
+                        <p class="top_head">Integrating Knowledge Graphs and Bayesian Networks: A Hybrid Approach for Explainable Disease Risk Prediction</p>
+                        <p class="pro_name"><span>Mbithe Nzomo,</span> Deshendran Moodley</p>
+                        <p>Accepted for presentation at the <span>49th IEEE International Conference on Computers, Software, and Applications (COMPSAC 2025).</span> The accepted paper is currently available on arXiv, and the final published version will be available via IEEE Xplore.</p>
+                        <div class="btns_group">
+                             <a class="site_btn" href="#">arXiv</a>
+                             <a class="site_btn" href="#">PDF</a>
+                        </div>
                     </div>
                     <div class="pub_box">
-                        <h3>Journal Papers</h3>
-                        <ol>
-                            <li><p>Joel Poncha Lemayian, Al-Turjman Fadi, Sinem Alturjman, and Leonardo Mostarda. "Enhanced Deployment Strategy for the 5G Drone-BS Using Artificial Intelligence." IEEE Access 7 (2019): 75999-76008.</p></li>
-                            <li><p>Al-Turjman Fadi and Joel Poncha Lemayian. "Intelligence, security, and vehicular sensor networks in internet of things (IoT)-enabled smart-cities: An overview." Computers & Electrical Engineering 87 (2020): 106776.</p></li>
-                            <li><p>Lemayian JP, Hamamreh JM. “Massive MIMO Channel Prediction Using Recurrent Neural Networks”. RS Open Journal on Innovative Communication Technologies [Internet]. 2020 Aug 12;1(1). Available from: https://rs-ojict.pubpub.org/pub/massive-mimo-channel-prediction-using-recurrent-neural-networks.</p></li>
-                            <li><p>Lemayian, Joel Poncha, and Jehad M. Hamamreh. "Autonomous First Response Drone-Based Smart Rescue System for Critical Situation Management in Future Wireless Networks." RS Open Journal on Innovative Communication Technologies (2020).</p></li>
-                            <li><p>Bahache, M., Lemayian, J. P., Wang, W., & Hamamreh, J. M. (2020). “An Inclusive Survey of Contactless Wireless Sensing: A Technology Used for Remotely Monitoring Vital Signs Has the Potential to Combating COVID-19.” RS Open Journal on Innovative Communication Technologies. <a href="https://doi.org/10.46470/03d8ffbd.5b3676f3">https://doi.org/10.46470/03d8ffbd.5b3676f3</a></p></li>
-                            <li><p>Lemayian, J. P., & Hamamreh, J. M. (2020). “A Novel Small-Scale Nonorthogonal Communication Technique Using Auxiliary Signal Superposition with Enhanced Security for Future Wireless Networks”. RS Open Journal on Innovative Communication Technologies. <a href="https://doi.org/10.46470/03d8ffbd.86b0d106">https://doi.org/10.46470/03d8ffbd.86b0d106</a></p></li>
-                            <li><p>Hamamreh, J. M., Abewa, M., & Lemayian, J. P. (2020). “New Non-Orthogonal Transmission Schemes for Achieving Highly Efficient, Reliable, and Secure Multi-User Communications.” RS Open Journal on Innovative Communication Technologies, 1(2). <a href="https://doi.org/10.46470/03d8ffbd.324cc0fb">https://doi.org/10.46470/03d8ffbd.324cc0fb</a></p></li>
-                        </ol>
+                        <p class="top_head">A Semantic Architecture for Continuous Health Monitoring, Risk Prediction, and Proactive Decision Making <span>(Best Student Paper award)</span></p>
+                        <p class="pro_name"><span>Mbithe Nzomo,</span> Deshendran Moodley</p>
+                        <p>In: Shaban-Nejad, A., Michalowski, M., Bianco, S. (eds) AI for Health Equity and Fairness. Studies in Computational Intelligence, vol 1164. Springer, Cham. 2024. Presented at the <span>8th International Workshop on ​Health Intelligence (W3PHIAI-24)</span> at the 38th AAAI Conference on Artificial Intelligence (AAAI-24).</p>
+                        <div class="btns_group">
+                             <a class="site_btn" href="#">Publisher</a>
+                             <a class="site_btn" href="#">PDF</a>
+                        </div>
                     </div>
                      <div class="pub_box">
-                        <h3>Conference Papers</h3>
-                        <ol>
-                            <li><p>Lemayian, Joel Poncha, and Jehad M. Hamamreh. “Novel Small-Scale NOMA Communication Technique Using Auxiliary Signal Superposition.” 2020 International Conference on UK-China Emerging Technologies (UCET) (August 2020). doi:10.1109/ucet51115.2020.9205475.</p></li>
-                            <li><p>Lemayian, Joel Poncha, and Jehad M. Hamamreh. “Recurrent Neural Network-Based Channel Prediction in mMIMO for Enhanced Performance in Future Wireless Communication.” 2020 International Conference on UK-China Emerging Technologies (UCET) (August 2020). doi:10.1109/ucet51115.2020.9205452.</p></li>
-                            <li><p>Poncha Lemayian Joel, Sherin Abdelhamid, Sinem Alturjman, Enver Ever, and Fadi Al-Turjman. "5G in a convergent Internet of Things era: An overview." In 2018 IEEE International Conference on Communications Workshops (ICC Workshops), pp. 1-6. IEEE, 2018.</p></li>
-                            <li><p>Poncha Lemayian Joel and Jehad HAMAMREH. "First Responder Drones for Critical Situation Management" In 2019 Innovations in Intelligent Systems and Applications Conference (ASYU), pp. 1-4. IEEE, 2019.</p></li>
-                        </ol>
+                        <p class="top_head">Semantic Web technologies in sensor-based personal health monitoring systems: A systematic mapping study</p>
+                        <p class="pro_name"><span>Mbithe Nzomo,</span> Deshendran Moodley</p>
+                        <p>arXiv preprint. Revised and under review at the <span>Semantic Web journal.</span> 2024.</p>
+                        <div class="btns_group">
+                              <a class="site_btn" href="#">arXiv</a>
+                              <a class="site_btn" href="#">PDF</a>
+                              <a class="site_btn" href="#">Open Review</a>
+                        </div>
                     </div>
                     <div class="pub_box">
-                        <h3>Supported work</h3>
-                        <ol>
-                            <li><p>Gençağa Deniz and Sevgi Şengül Ayan. "Effects of neuronal noise on neural communication." In Multidisciplinary Digital Publishing Institute Proceedings, vol. 33, no. 1, p. 2. 2019.</p></li>
-                        </ol>
+                         <p class="top_head">A Hybrid AI Framework for Sensor-Based Personal Health Monitoring towards Precision Health (Extended Abstract)</p>
+                        <p class="pro_name"><span>Mbithe Nzomo</span></p>
+                        <p>Proceedings of the <span>38th AAAI Conference on Artificial Intelligence.</span> Vol. 38 No. 21: IAAI-24, EAAI-24, AAAI-24 Student Abstracts, Undergraduate Consortium and Demonstrations. Doctoral Consortium Track. 2024.</p>
+                        <div class="btns_group">
+                            <a class="site_btn" href="#">Publisher</a>
+                              <a class="site_btn" href="#">PDF</a>
+                        </div>
                     </div>
                     <div class="pub_box">
-                        <h3>Work under review</h3>
-                        <ol>
-                            <li><p>Gençağa Deniz and Sevgi Şengül Ayan. "Effects of neuronal noise on neural communication." In Multidisciplinary Digital Publishing Institute Proceedings, vol. 33, no. 1, p. 2. 2019.</p></li></p></li>
-                        </ol>
+                        <p class="top_head">A Personal Health Agent for Decision Support in Arrhythmia Diagnosis</p>
+                        <p class="pro_name">Tezira Wanyana, <span>Mbithe Nzomo</span>, C. S. Price, Deshendran Moodley</p>
+                        <p>In: Information and Communication Technologies for Ageing Well and e-Health. ICT4AWE ICT4AWE 2021 2022. Communications in Computer and Information Science, volume 1856. 2023.</p>
+                        <div class="btns_group">
+                            <a class="site_btn" href="#">Publisher</a>
+                              <a class="site_btn" href="#">PDF</a>
+                        </div>
+                    </div>
+                    <div class="pub_box">
+                        <p class="top_head">Combining Machine Learning and Bayesian Networks for ECG Interpretation and Explanation <span>(Nominated for Best Student Paper award)</span></p>
+                        <p class="pro_name">Tezira Wanyana, <span>Mbithe Nzomo</span>, C. S. Price, Deshendran Moodley</p>
+                        <p>8th International Conference on Information and Communication Technologies for Ageing Well and e-Health (ICT4AWE 2022). 2022.</p>
+                        <div class="btns_group">
+                            <a class="site_btn" href="#">Publisher</a>
+                              <a class="site_btn" href="#">PDF</a>
+                        </div>
                     </div>
                 </div>
             </div>
