--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     </div>
                      <h2>Highlights</h2>
                      <div class="highlights">
+                        <p><strong>July 2025:</strong> Presented <em>EVMx: An FPGA-Based Smart Contract Processing Unit</em> at <strong>COMPSAC 2025</strong> in Toronto, showcasing its acceleration of smart contract execution on the Ethereum blockchain.</p>
+                     </div>
+                     <div class="highlights">
                         <p><strong>December 2024:</strong> Presented a secure hardware architecture for the SECP256K1 cryptographic algorithm at <strong>HASP@MICRO</strong> in Austin, Texas, with a focus on side-channel attack resistance for cryptocurrency applications.</p>
                      </div>
                      <div class="highlights">
