--- a/CV.html
+++ b/CV.html
@@ -27,8 +27,9 @@
                                 <p>April 2021 – October 2025</p>
                             </div> 
                             <div class="back_side">
-                                <div class="back_content"><strong>Thesis title:</strong> “A Hybrid AI Framework for Data Fusion, Situation Analysis, and Decision Support towards Precision Health”</div>
-                                 <div class="back_content"><strong>Supervisor:</strong> Deshen Moodley</div>                            
+                                <div class="back_content"><strong>Thesis title:</strong> “FPGA-Based Solutions for Secure Cryptocurrency Wallets and Accelerated Smart Contract Execution”</div>
+                                 <div class="back_content"><strong>Supervisor:</strong> Pascal Giard</div> 
+                                 <div class="back_content"><strong>co-supervisor:</strong> Kaiwen Zhang</div>                             
                             </div>
                         </div>
                         <div class="education_box">
