--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
                     <p>With a strong passion for his research field, he have made numerous contributions to the industry by authoring several articles in journals, conference papers, and book chapters. In addition to academic and professional pursuits, he is also actively involved in various student organizations. He serves as the Director of Marketing for the IEEE student branch in Montreal (2022-2023) and the president of the Congrès annuel des étudiantes et étudiants chercheurs de l'ÉTS (CAéc) (2023-2025). In his free time, he enjoy participating in numerous sporting activities such as Basketball, volleyball, badminton, and table tennis.</p>
                     <h2>Research Interests</h2>
                     <ul>
-                        <li>Blockchain technology</li>
-                        <li>Hardware design</li>
-                        <li>Wireless communication</li>
-                        <li>Physical layer security</li>
-                        <li>Wireless security</li>
+                        <ul>
+                            <li><strong>Blockchain Technology</strong> – with a focus on cryptocurrencies like Bitcoin and Ethereum, as well as the Ethereum Virtual Machine (EVM).</li>
+                            <li><strong>Cryptography</strong> – particularly elliptic curve cryptography (SECP256K1), ECDSA, and side-channel attack resistance.</li>
+                            <li><strong>Hardware Development</strong> – designing and implementing cryptographic systems and wallets directly in hardware for enhanced security.</li>
+                            <li><strong>FPGA and VHDL Design</strong> – hardware acceleration of blockchain processes, from cold wallets to EVM execution, using RTL, simulation, and synthesis.</li>
+                            <li><strong>Artificial Intelligence and Machine Learning</strong> – applying ML techniques to optimize blockchain systems, such as opcode dependency analysis and parallelism in EVM execution.</li>
+                            <li><strong>Physical Layer Security</strong> – leveraging artificial noise injection to protect cryptographic hardware and communications from eavesdropping and side-channel threats.</li>
                     </ul>
                     <h2>Current project</h2>
                     <ul>
