--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
                     <h2>Research Interests</h2>
                     <ul>
                         <ul>
-                            <li><strong>Blockchain Technology</strong> – with a focus on cryptocurrencies like Bitcoin and Ethereum, as well as the Ethereum Virtual Machine (EVM).</li>
-                            <li><strong>Cryptography</strong> – particularly elliptic curve cryptography (SECP256K1), ECDSA, and side-channel attack resistance.</li>
-                            <li><strong>Hardware Development</strong> – designing and implementing cryptographic systems and wallets directly in hardware for enhanced security.</li>
-                            <li><strong>FPGA and VHDL Design</strong> – hardware acceleration of blockchain processes, from cold wallets to EVM execution, using RTL, simulation, and synthesis.</li>
-                            <li><strong>Artificial Intelligence and Machine Learning</strong> – applying ML techniques to optimize blockchain systems, such as opcode dependency analysis and parallelism in EVM execution.</li>
-                            <li><strong>Physical Layer Security</strong> – leveraging artificial noise injection to protect cryptographic hardware and communications from eavesdropping and side-channel threats.</li>
+                            <li>Blockchain Technology – Bitcoin, Ethereum, EVM</li>
+                            <li>Cryptography – SECP256K1, ECDSA, SCA resistance</li>
+                            <li>Hardware Development – secure crypto systems, EVM</li>
+                            <li>FPGA & VHDL Design – hardware acceleration</li>
+                            <li>Physical Layer Security – artificial noise injection</li>
                     </ul>
                     <h2>Current project</h2>
                     <ul>
