--- a/CV.html
+++ b/CV.html
@@ -24,12 +24,12 @@
                                 <div class="ubi_img"><img src="assets/images/phd.png" alt="phd" /></div>
                                 <h4>PhD, Electrical Engineering</h4>
                                 <div class="university">Ecole de Technologie Superieure (ETS) - Canada</div>
-                                <p>April 2021 – October 2025</p>
+                                <p>April 2021 – December 2025</p>
                             </div> 
                             <div class="back_side">
                                 <div class="back_content"><strong>Thesis title:</strong> “FPGA-Based Solutions for Secure Cryptocurrency Wallets and Accelerated Smart Contract Execution”</div>
                                  <div class="back_content"><strong>Supervisor:</strong> Pascal Giard</div> 
-                                 <div class="back_content"><strong>co-supervisor:</strong> Kaiwen Zhang</div>                             
+                                 <div class="back_content"><strong>Co-supervisor:</strong> Kaiwen Zhang</div>                             
                             </div>
                         </div>
                         <div class="education_box">
@@ -40,9 +40,9 @@
                                 <p>July 2018 - March 2021</p>
                             </div>
                             <div class="back_side">
-                                <div class="back_content"><strong>Degree classification:</strong> Disctinction</div>
-                                 <div class="back_content"><strong>Dissertation title:</strong> “Hello, Goodbye: Training Social Robots to Manage Interactions with Humans”</div>                            
-                                 <div class="back_content"><strong>Supervisor:</strong> Angelo Cangelosi</div>                            
+                                <div class="back_content"><strong>Degree classification:</strong> High Honor</div>
+                                 <div class="back_content"><strong>Dissertation title:</strong> “UAV-based Smart Rescue System Utilizing a Novel Wireless Communication Technique With Enhanced Security Against Internal and External Attacks”</div>                            
+                                 <div class="back_content"><strong>Supervisor:</strong> Jehad Hamamreh</div>                            
                             </div>
                         </div>
                         <div class="education_box">
@@ -50,10 +50,11 @@
                                 <div class="ubi_img"><img src="assets/images/bsc.png" alt="bsc" /></div>
                                 <h4>BSc, Electrical and Computer Engineering</h4>
                                 <div class="university">Middle East Technical University (METU) - Turkey</div>
-                                <p>July 2018 - March 2021</p>
+                                <p>February 2013 - July 2017</p>
                             </div>
                              <div class="back_side">
-                                <div class="back_content"><strong>Degree classification:</strong> Upper Second Class Honours</div>
+                                <div class="back_content"><strong>Degree classification:</strong>Honours</div>
+                                <div class="back_content"><strong>Project:</strong>"Design and Development of an Autonomous Aerial Surveillance Vehicle (AASV)"</div>
                             </div>
                         </div>
                     </div>
