--- a/publications.html
+++ b/publications.html
@@ -20,12 +20,12 @@
                             <li><p>Lemayian Joel Poncha and Fadi Al-Turjman. "Intelligent IoT communication in smart environments: An overview." In Artificial Intelligence in IoT, pp. 207-221. Springer, Cham, 2019.</p></li>
                             <li><p>Joel Poncha Lemayian, Al-Turjman, Fadi, Sinem Alturjman, and Leonardo Mostarda. "Optimal Placement for 5G Drone-BS Using SA and GA" In Drones in IoT-enabled Space pp. 100-110. CRC Press, 2019.</p></li>
                         </ol> -->
-                        <p class="top_head">Integrating Knowledge Graphs and Bayesian Networks: A Hybrid Approach for Explainable Disease Risk Prediction</p>
-                        <p class="pro_name"><span>Mbithe Nzomo,</span> Deshendran Moodley</p>
-                        <p>Accepted for presentation at the <span>49th IEEE International Conference on Computers, Software, and Applications (COMPSAC 2025).</span> The accepted paper is currently available on arXiv, and the final published version will be available via IEEE Xplore.</p>
+                        <p class="top_head">WiP: Towards a Secure SECP256K1 for Crypto Wallets: Hardware Architecture and Implementation</p>
+                        <p class="pro_name"><span> Joel Poncha Lemayian,</span> Ghyslain Gagnon, Kaiwen Zhang, Pascal Giard</p>
+                        <p>Presented  at the <span>Hardware and Architectural Support for Security and Privacy (HASP) 2024 @ MICRO 2024.</span> </p>
                         <div class="btns_group">
-                             <a class="site_btn" href="#">arXiv</a>
-                             <a class="site_btn" href="#">PDF</a>
+                             <a class="site_btn" href="https://arxiv.org/abs/2411.03910">arXiv</a>
+                             <a class="site_btn" href="https://arxiv.org/pdf/2411.03910">PDF</a>
                         </div>
                     </div>
                     <div class="pub_box">
