--- a/publications.html
+++ b/publications.html
@@ -15,6 +15,15 @@
                 <h2>Publications and Preprints</h2>
                 <div class="publication_lists">
                     <div class="pub_box">
+                        <p class="top_head">EVMx: An FPGA-Based Smart Contract Processing Unit</p>
+                        <p class="pro_name"><span>Joel Poncha Lemayian,</span> Hachem Bensalem, Ghyslain Gagnon, Kaiwen Zhang, Pascal Giard</p>
+                        <p>Presented  at the <span>2025 IEEE 49th Annual Computers, Software, and Applications Conference (COMPSAC)</span> in Toronto, Canada</p>
+                        <div class="btns_group">
+                             <a class="site_btn" href="https://ieeexplore.ieee.org/abstract/document/11126724">Publisher</a>
+                             <a class="site_btn" href="https://arxiv.org/pdf/2507.23518">PDF</a>
+                        </div>
+                    </div>
+                    <div class="pub_box">
                         <!-- <h3>Book chapters</h3> -->
                         <!-- <ol>
                             <li><p>Lemayian Joel Poncha and Fadi Al-Turjman. "Intelligent IoT communication in smart environments: An overview." In Artificial Intelligence in IoT, pp. 207-221. Springer, Cham, 2019.</p></li>
@@ -22,19 +31,10 @@
                         </ol> -->
                         <p class="top_head">WiP: Towards a Secure SECP256K1 for Crypto Wallets: Hardware Architecture and Implementation</p>
                         <p class="pro_name"><span> Joel Poncha Lemayian,</span> Ghyslain Gagnon, Kaiwen Zhang, Pascal Giard</p>
-                        <p>Presented  at the <span>Hardware and Architectural Support for Security and Privacy (HASP) 2024 @ MICRO 2024.</span> </p>
+                        <p>Presented  at the <span>2024 Hardware and Architectural Support for Security and Privacy (HASP) workshop @ MICRO 2024.</span> in Austin, Texas, USA </p>
                         <div class="btns_group">
                              <a class="site_btn" href="https://arxiv.org/abs/2411.03910">arXiv</a>
                              <a class="site_btn" href="https://arxiv.org/pdf/2411.03910">PDF</a>
-                        </div>
-                    </div>
-                    <div class="pub_box">
-                        <p class="top_head">A Semantic Architecture for Continuous Health Monitoring, Risk Prediction, and Proactive Decision Making <span>(Best Student Paper award)</span></p>
-                        <p class="pro_name"><span>Mbithe Nzomo,</span> Deshendran Moodley</p>
-                        <p>In: Shaban-Nejad, A., Michalowski, M., Bianco, S. (eds) AI for Health Equity and Fairness. Studies in Computational Intelligence, vol 1164. Springer, Cham. 2024. Presented at the <span>8th International Workshop on ​Health Intelligence (W3PHIAI-24)</span> at the 38th AAAI Conference on Artificial Intelligence (AAAI-24).</p>
-                        <div class="btns_group">
-                             <a class="site_btn" href="#">Publisher</a>
-                             <a class="site_btn" href="#">PDF</a>
                         </div>
                     </div>
                      <div class="pub_box">
