--- a/updates.html
+++ b/updates.html
@@ -14,7 +14,7 @@
                 <div class="container">
                  <h2>Updates</h2>
                      <div class="highlights">
-                        <p><strong>July 2025:</strong> Presented our work <em>EVMx: An FPGA-Based Smart Contract Processing Unit</em> at <strong>COMPSAC 2025</strong>, Toronto, Canada.</p>
+                        <p><strong>July 2025:</strong> Presented our work <em>EVMx: An FPGA-Based Smart Contract Processing Unit</em> at <strong>COMPSAC 2025</strong>, in Toronto, Canada.</p>
                      </div>
                      <div class="highlights">
                         <p><strong>December 2024:</strong> Presented a secure hardware architecture for the SECP256K1 cryptographic algorithm at <strong>HASP@MICRO</strong> in Austin, Texas, with a focus on side-channel attack resistance for cryptocurrency applications.</p>
